--- a/_posts/2018-06-30-demo-post.md
+++ b/_posts/2018-06-30-demo-post.md
@@ -5,7 +5,7 @@ description: This page is a demo that shows everything you can do inside portfol
 featured_image: '/images/demo/demo-square.jpg'
 ---
 
-![](/images/demo/demo-landscape.jpg)
+![]({{ site.baseurl }}/images/demo/demo-landscape.jpg)
 
 ## Demo content
 
@@ -58,10 +58,10 @@ Inspired by the Galleries feature from WordPress, we've made it easy to create g
 
 ```html
 <div class="gallery" data-columns="3">
-    <img src="/images/demo/demo-portrait.jpg">
-    <img src="/images/demo/demo-landscape.jpg">
-    <img src="/images/demo/demo-square.jpg">
-    <img src="/images/demo/demo-landscape-2.jpg">
+    <img src="{{ site.baseurl }}/images/demo/demo-portrait.jpg">
+    <img src="{{ site.baseurl }}/images/demo/demo-landscape.jpg">
+    <img src="{{ site.baseurl }}/images/demo/demo-square.jpg">
+    <img src="{{ site.baseurl }}/images/demo/demo-landscape-2.jpg">
 </div>
 ```
 
@@ -78,8 +78,8 @@ Here's another gallery with only one column, which creates a carousel slide-show
 A nice little feature: the carousel only advances when it is in view, so your visitors won't scroll down to find it half way through your images.
 
 <div class="gallery" data-columns="1">
-	<img src="/images/demo/demo-landscape.jpg">
-	<img src="/images/demo/demo-landscape-2.jpg">
+	<img src="{{ site.baseurl }}/images/demo/demo-landscape.jpg">
+	<img src="{{ site.baseurl }}/images/demo/demo-landscape-2.jpg">
 </div>
 
 ### What about videos?
